# demo-dagster-pipeline

./: .gitignore  Dockerfile  Justfile  README.md  dagster.yaml  docker-compose.yaml  init-aws.sh  pyproject.toml  workspace.yaml
dagster_pipeline/: __init__.py  assets.py  configs.py  definitions.py  jobs.py  sensors.py
dagster_pipeline/resources/: sqs.py
terraform/: alb.tf  cw.tf  data.tf  ecr.tf  ecs.tf  endpoints.tf  iam.tf  locals.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  service_discovery.tf  sqs.tf  terraform.tf  vpc.tf
tests/: test_sqs_job.py  test_sqs_resource.py
