[tool.poetry]
name = "dagster-pipeline"
version = "0.1.0"
description = "Demo Dagster data pipeline for MDRx learning day"
authors = ["alistairdivorty <alistair.divorty@mdrx.tech>"]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
boto3 = "^1.34.121"


[tool.poetry.group.dagster.dependencies]
dagster = "^1.7.9"
dagster-postgres = "^0.23.9"
dagster-aws = "^0.23.9"


[tool.poetry.group.dagster-webserver.dependencies]
dagster-webserver = "^1.7.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
isort = "^5.13.2"
pytest = "^8.2.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
